kubernetes/manifests/glance/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - "10.0.20.53"
        searches:
          - "home.lab"
          - "glance.svc.cluster.local"
          - "svc.cluster.local"
          - "cluster.local"
        options:
          - name: ndots
            value: "5"
      containers:
        - name: glance
          image: glanceapp/glance:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: glance-config
