kubernetes/manifests/glance/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
