kubernetes/manifests/glance/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-ingress
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: home-lab-ca
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: glance.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 80
  tls:
    - secretName: glance-tls
      hosts:
        - glance.home.lab
